# Tricky-n-Class-Classifier

./: .gitignore  CMakeLists.txt  README.md  chartview.cpp  chartview.h  main.cpp  nndata.cpp  nndata.h  nndatatest.cpp  nndatatest.h  nntrainingdata.cpp  nntrainingdata.h  nntrainingdatatest.cpp  nntrainingdatatest.h  spiralwalker.cpp  spiralwalker.h  test.cpp  walker.cpp  walker.h
headers/main/: nndata.h  nntrainingdata.h
headers/test/: nndatatest.h  nntrainingdatatest.h
src/common/: spiralwalker.cpp  walker.cpp
src/main/: chartview.cpp  main.cpp  nndata.cpp  nntrainingdata.cpp
src/test/: nndatatest.cpp  nntrainingdatatest.cpp  test.cpp
test/: utest_datagen.cpp
